# desenvolvimento-rapido-em-python

./: Makefile  README.md  manage.py  pyproject.toml
accounts/: context_processors.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: login_page.html  login_snippet.html  register_page.html
accounts/templates/accounts/: login_page.html  login_snippet.html  register_page.html
app/: urls.py  views.py
app/static/css/: base.css  main.css
app/static/sass/: main.scss
app/templates/: base.html  index.html  sobre.html
app/templates/app/: index.html
aula_exercicios/: EXERCICIOS.md
aula_exercicios/exercicio1/: exercicio_1.py
aula_exercicios/exercicio2/: exercicio_2.py
aula_exercicios/exercicio3/: exercicio_3.py  frases.txt  lista_a.txt
exercicios/exercicio1/: contar_palavras.txt  dna.txt  dna_invertido.txt  espaco_substituido.txt  exercicio_1.py  tabuada_nove.txt
exercicios/exercicio2/: exercicio_2.py
exercicios/exercicio3/: comentarios.txt  exercicio_3.py  jogadores_times.txt  lista_b.txt
exercicios_aula/exercicio3/: texto.txt
explore/: urls.py  views.py
explore/templates/: explore.html
maricacity/: asgi.py  settings.py  urls.py  wsgi.py
